# webui

./: .gitignore  .pylintrc  .yamllint  CHANGELOG.md  CONTRIBUTE.md  Dockerfile  Dockerfile_latest  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_build.txt  requirements_lint.txt  requirements_test.txt  setup.py
.github/ISSUE_TEMPLATE/: features.yml  problem.yml
.github/workflows/: codeql.yml  lint.yml  release.yml  test.yml
ansible-webui/: __init__.py  __main__.py  main.py  manage.py  route.py
ansible-webui/aw/: main.py  models.py  permission.py  route.py  serve_static.py  settings.py
ansible-webui/aw/config/: environment.py  hardcoded.py  main.py  navigation.py
ansible-webui/aw/execute/: play.py  util.py
ansible-webui/aw/model/: base.py  job.py
ansible-webui/aw/templates/: body.html  fallback.html  head.html
ansible-webui/aw/templatetags/: util.py
ansible-webui/aw/utils/: debug.py  handlers.py  util.py
ansible-webui/base/: scheduler.py  threader.py  webserver.py
config/: systemd_service.conf
docker/: Dockerfile_dev  Dockerfile_production  Dockerfile_production_aws  Dockerfile_production_unprivileged  Dockerfile_release  Dockerfile_unstable  Dockerfile_unstable_unprivileged  entrypoint_dev.sh  entrypoint_prod.sh  entrypoint_production.sh  entrypoint_unstable.sh  requirements.sh
docs/: html.sh
docs/source/: conf.py  index.rst
docs/source/_include/: head.rst  warn_develop.rst
docs/source/usage/: 1_install.rst  1_intro.rst  2_config.rst  2_install.rst  3_config.rst  3_run.rst  4_config.rst  api.rst  authentication.rst  backup.rst  config.rst  credentials.rst  development.rst  docker.rst  install.rst  integrations.rst  permission.rst  privileges.rst  repositories.rst  security.rst  troubleshooting.rst
examples/: nginx.conf  saml_google_workspace.yml  systemd_service.conf
scripts/: build.sh  docker_build.sh  docker_release.sh  kill_ps.sh  lint.sh  migrate_db.sh  run_dev.sh  run_pip_build.sh  run_shared.sh  run_staging.sh  test.sh  update_version.sh
src/ansible-webui/: __main__.py  cli.py  cli_init.py  db.py  main.py  manage.py  route.py  webserver.py
src/ansible-webui/aw/: admin.py  (+6 more)
src/ansibleguy-webui/: __main__.py  cli.py  cli_init.py  db.py  handle_signals.py  main.py  manage.py  webserver.py
test/: ansible.cfg  play1.yml
test/demo/: play1.yml  reset.sh  web-service.yml
test/integration/: config.yml
test/inv/: hosts.yml
(+222 files in other folders)
