[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ansibleguy-webui"
authors = [
    {name = "AnsibleGuy", email = "contact@ansibleguy.net"},
]
description = "Basic WebUI for using Ansible"
readme = "README.md"
requires-python = ">=3.10"  # django 5.0
keywords = ["ansible", "webui", "automation", "iac"]
license = {file = "LICENSE.txt"}
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Framework :: Django',
]
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/ansibleguy/webui"
Documentation = "https://webui.ansibleguy.net/"
Repository = "https://github.com/ansibleguy/webui.git"
Issues = "https://github.com/ansibleguy/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.js", "*.css", "*.svg"]

# [project.scripts]
# ansibleguy-webui = "ansibleguy-webui.__main__"
# ansibleguy-webui-db = "ansibleguy-webui.manage"
